# sunbeam-valet

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  install-deps.sh  pyproject.toml  tox.ini  workshop.yaml
.github/workflows/: ci.yaml
agents/: developer.md  judge.md  product_manager.md  sre.md
config/: harness.yaml
deployments/k8s-cluster/: main.tf  outputs.tf  terragrunt.hcl  variables.tf
deployments/mattermost/: main.tf  outputs.tf  terraform.tfvars  terragrunt.hcl  variables.tf
specs/: mattermost.md
src/sunbeam_valet/: __init__.py  __main__.py  cli.py  config.py  harness.py  models.py
src/sunbeam_valet/agent/: __init__.py  pool.py  runner.py
src/sunbeam_valet/dashboard/: README.md  app.py  db.py  judge.py  models.py  settings.py  store.py  watchtower.py
src/sunbeam_valet/dashboard/static/: style.css
src/sunbeam_valet/dashboard/templates/: base.html.j2  bug_detail.html.j2  bug_row.html.j2  config.html.j2  index.html.j2
src/sunbeam_valet/disagreement/: __init__.py  base.py  std_dev.py
src/sunbeam_valet/fetchers/: __init__.py  base.py  watchtower.py
src/sunbeam_valet/formatters/: __init__.py  base.py  markdown.py
src/sunbeam_valet/judge/: __init__.py  engine.py  output.py
src/sunbeam_valet/mattermost/: __init__.py  poster.py
tests/: conftest.py
tests/integration/: test_harness.py
tests/unit/: test_agent_runner.py  test_cli.py  test_config.py  test_disagreement.py  test_fetchers.py  test_formatters.py  test_harness.py  test_judge_engine.py  test_mattermost.py
