[project]
name = "sunbeam-valet"
version = "0.1.0"
description = "AI-assisted project valet for Sunbeam: triages backlog, surfaces actionable work, and helps maintainers keep issue queues healthy."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Guillaume Boutry", email = "guillaume.boutry@canonical.com" },
    { name = "Felipe Reyes", email = "felipe.reyes@canonical.com" },
    { name = "Himawan Winarto", email = "himawan.winarto@canonical.com" },
    { name = "Lucas Payne", email = "lucas.payne@canonical.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-ai>=1.95.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[project.scripts]
sunbeam-valet = "sunbeam_valet.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
]
test = ["pytest", "pytest-asyncio", "coverage[toml]"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "D",
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
exclude = ["tests/"]

[tool.ty.rules]
possibly-missing-attribute = "ignore"
invalid-assignment = "ignore"

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/sunbeam_valet/dashboard/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
